# chatwithallys

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
allys/: __init__.py  bot.py  brain.py  config.py  db.py  main.py  market.py  media.py  memes.py  ollama.py  place.py  podcast.py  rag.py  sentiment.py  tma.py
miniapp/: index.html  package-lock.json  package.json  vite.config.js
miniapp/src/: main.jsx  styles.css
tests/: test_brain.py  test_media.py  test_place.py  test_podcast.py  test_sentiment.py  test_tma.py
